# poc-iot-hub

./: env.example  index.html  main.py  pyproject.toml
app/: main.py  test.py
app/models/: telemetry.py
app/mqtt/: client.py  config.py  sas.py  settings.py
